--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,6 @@
     <div id="page-background">
       <canvas class="particles"></canvas>
     </div>
-
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
     <script
@@ -36,70 +35,9 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.2/particles.min.js"
       crossorigin="anonymous"
     ></script>
-    <!-- Core theme JS-->
-    <script>
-      window.addEventListener("DOMContentLoaded", (event) => {
-        // Navbar shrink function
-        var navbarShrink = function () {
-          const navbarCollapsible = document.body.querySelector("#mainNav");
-          if (!navbarCollapsible) {
-            return;
-          }
-          if (window.scrollY === 0) {
-            navbarCollapsible.classList.remove("navbar-shrink");
-          } else {
-            navbarCollapsible.classList.add("navbar-shrink");
-          }
-        };
-        Particles.init({
-          selector: ".particles",
-          color: "#ffc800",
-          connectParticles: true,
-          speed: 0.2,
-          responsive: [
-            {
-              breakpoint: 768,
-              options: {
-                maxParticles: 100,
-              },
-            },
-            {
-              breakpoint: 425,
-              options: {
-                maxParticles: 50,
-              },
-            },
-          ],
-        });
-
-        // Shrink the navbar
-        navbarShrink();
-
-        // Shrink the navbar when page is scrolled
-        document.addEventListener("scroll", navbarShrink);
-
-        // Activate Bootstrap scrollspy on the main nav element
-        const mainNav = document.body.querySelector("#mainNav");
-        if (mainNav) {
-          new bootstrap.ScrollSpy(document.body, {
-            target: "#mainNav"
-          });
-        }
-
-        // Collapse responsive navbar when toggler is visible
-        const navbarToggler = document.body.querySelector(".navbar-toggler");
-        const responsiveNavItems = [].slice.call(
-          document.querySelectorAll("#navbarResponsive .nav-link")
-        );
-        responsiveNavItems.map(function (responsiveNavItem) {
-          responsiveNavItem.addEventListener("click", () => {
-            if (window.getComputedStyle(navbarToggler).display !== "none") {
-              navbarToggler.click();
-            }
-          });
-        });
-      });
-    </script>
+    <script src="{{ site.baseurl }}/javascript/modernizr-3.11.2.min.js"></script>
+    <script src="{{ site.baseurl }}/javascript/plugins.js"></script>
+    <script src="{{ site.baseurl }}/javascript/main.js"></script>
     <!-- Cloudflare Web Analytics -->
     <script
       defer
