--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,14 @@
     <div id="page-background">
       <canvas class="particles"></canvas>
     </div>
+    <!-- Set the correct contact form http endpoint -->
+    <script>
+      if ("{{ jekyll.environment }}" == "development")
+        window.CONTACT_FORM_ENDPOINT_TRIGGER = "http://localhost:7071";
+      else if ("{{ jekyll.environment }}" == "production")
+        window.CONTACT_FORM_ENDPOINT_TRIGGER =
+          "https://attc-website-email-trigger.azurewebsites.net";
+    </script>
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
     <script
