Update directory structure
- Add new why page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,9 @@
 <footer class="footer py-4 bg-secondary">
   <div class="container">
     <div class="row align-items-center">
-      <div class="col-lg-4 text-lg-start text-light">ATTC 2023</div>
+      <div class="col-lg-4 text-lg-start text-light">
+        ATTC 2023 | Adelaide, SA Australia
+      </div>
       <div class="col-lg-4 my-3 my-lg-0"></div>
       <div class="col-lg-4 text-lg-end">
         <a class="nav-link text-decoration-none" href="{% link privacy.html %}"
