--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -3,7 +3,7 @@
     <a class="navbar-brand" href="{% link index.html %}">
       <img
         class="img-fluid"
-        src="{{ site.base_url }}/images/logo_horizontal_white.svg"
+        src="{{ site.base_url }}/assets/images/logo_horizontal_white.svg"
         alt="Access To The Cloud Logo"
       />
     </a>
@@ -29,6 +29,12 @@
             >What we do</a
           >
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% link why.md %}">Why</a>
+        </li>
+        <!--<li class="nav-item">-->
+          <!--<a class="nav-link" href="{% link articles.html %}">Articles</a>-->
+        <!--</li>-->
         <li class="nav-item">
           <a class="nav-link" href="{% link index.html %}#contact">Contact</a>
         </li>
