--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -6,14 +6,20 @@
     window.CONTACT_FORM_ENDPOINT_TRIGGER = "{{site.email_endpoint}}";
 </script>
 <!-- Bootstrap core JS-->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+<script
+  src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+  crossorigin="anonymous"
+></script>
 <script
   src="https://use.fontawesome.com/releases/v6.1.0/js/all.js"
+  integrity="sha384-vLLEq/Un/eZFmXAu4Xxf8F00RSSMzPcI7iDiT6hpB4zFpezCEGhb5daeR8PLyrLI"
   crossorigin="anonymous"
 ></script>
 <!-- Cool looking particle things for the masthead -->
 <script
   src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.2/particles.min.js"
+  integrity="sha384-d++6Nau1/FhyY7udljoORGpa2ohuLY44TBey9B0n6vm5C01aMaZaFeOBWo8dj1Rk"
   crossorigin="anonymous"
 ></script>
 <script src="{{ site.baseurl }}/assets/javascript/modernizr-3.11.2.min.js"></script>
@@ -23,6 +29,8 @@
 <script
   defer
   src="https://static.cloudflareinsights.com/beacon.min.js"
+  integrity="sha384-ikHI8F+DCZ/OP4pxSzGmk/E2UZdZ8TNqbm/HJcr90E1vUeqCnW7y8D8dC9AGuWV9"
+  crossorigin="anonymous"
   data-cf-beacon='{"token": "319530c9c18349fa93c9a094f1a8f218"}'
 ></script>
 <!-- End Cloudflare Web Analytics -->
